add up-to-date links to documentation

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ envlist = py{37,38,39,310,311}
     3.11: py311
 
 [testenv]
-deps = sphinx
+deps = -rrequirements.txt
 commands = sphinx-build -W -b html -d {toxinidir}/build/doctrees {toxinidir}/source/ {toxinidir}/build/html
